--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   google_fonts: ^6.2.1
   flutter_bloc: ^8.1.6
   bloc_test: ^9.1.7
+  mockito: ^5.4.4
+  provider: ^6.1.2
 
 dev_dependencies:
   flutter_test:
